# tldr-pipeline

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  tldr
.claude/skills/: curation_rubric.md  data_sources.md  tldr_crypto_voice.md  tldr_data_voice.md  tldr_design_voice.md  tldr_dev_voice.md  tldr_devops_voice.md  tldr_fintech_voice.md  tldr_founders_voice.md  tldr_infosec_voice.md  tldr_it_voice.md  tldr_marketing_voice.md  tldr_product_voice.md  tldr_tech_voice.md  tldr_voice.md  (+1 more)
.streamlit/: config.toml
blurbs/: generate.py  run.py
common/: __init__.py  already_covered.py  article_fetch.py  backtest.py  cache.py  config.py  decisions.py  embeddings.py  engagement.py  json_utils.py  llm.py  llm_extractor.py  newsletters.py  parallel.py  past_blurbs.py  source_weights.py  story.py  title_rewrite.py
config/: newsletters.yaml  sources.yaml
data/: source_weights.json
dedup/: cluster.py  run.py
docs/: DEPLOY.md  spacex-research.md  tldr_source_audit.md  ui_redesign.md
formatters/: tldr.py
funding/: extract.py  run.py
ingestion/: arxiv_puller.py  hn.py  rss.py  run.py  tldr_picks.py
ranking/: run.py  score.py
scripts/: auto_add_sources.py  backfill_funding_archive.py  backtest.py  com.tldr.pipeline.refresh.plist  cron-refresh.sh  install-launchd.sh  learn_source_weights.py  mine_tldr_sources.py  run_backtest_cache.py  tweet_funding.py
ui/: app.py
vc/: extract.py  run.py
web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
(+1986 files in other folders)
