[project]
name = "tldr-pipeline"
version = "0.1.0"
description = "AI-assisted curation pipeline for tech newsletters, modeled on TLDR AI."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.1",
    "feedparser>=6.0.11",
    "arxiv>=2.1.3",
    "requests>=2.32.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "trafilatura>=2.1.0",
    "tweepy>=4.16.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.uv]
# Always use uv's managed Python (downloaded once into ~/.local/share/uv/python)
# instead of whatever system Python is first on PATH. Avoids picking up an
# Intel Homebrew python on Apple Silicon, which then can't install torch.
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
